--- a/rootdir/ueventd.mt8163.rc
+++ b/rootdir/ueventd.mt8163.rc
@@ -1,26 +1,53 @@
-/dev/pvrsrvkm             0766   root       root
-/dev/pvr_sync           0766   root         root
-/dev/stpwmt             0660   system       system
-/dev/stpbt              0660   bluetooth    radio
-/dev/stpgps             0660   gps          gps
-/dev/Vcodec             0660   media        system
-/dev/wmtWifi            0660   system       system
-/dev/sec                0660   root         system
-/dev/preloader          0640   root         system
-/dev/misc-sd            0640   root         system
-/dev/sec_ro             0640   root         system
-/dev/recovery           0640   root         system
-/dev/seccfg             0660   root         system
-/dev/block/mmcblk0      0660   root         root
-/dev/block/platform/mtk-msdc.0/by-name/PRO_INFO  0660    root    system
-/dev/trustzone          0660   root         drmrpc
-/dev/devmap             0444   root         media
-/dev/mali               0666   system      graphics
-/dev/gps                0660   gps          system
-/dev/ttyGS2             0660   bluetooth    radio
-/dev/dvt-adc            0660   root         camera 
+#change partition permission
+/dev/block/platform/soc/11230000.mmc/by-name/boot      0640    root    system
+/dev/block/platform/soc/11230000.mmc/by-name/recovery  0640    root    system
+/dev/block/platform/soc/11230000.mmc/by-name/secro     0640    root    system
+/dev/block/platform/soc/11230000.mmc/by-name/seccfg    0660    root    system
+/dev/block/platform/soc/11230000.mmc/by-name/proinfo   0660    root    system
+/dev/block/platform/soc/11230000.mmc/by-name/nvram     0660    root    system
+/dev/block/platform/soc/11230000.mmc/by-name/para      0660    root    system
+/dev/block/platform/soc/11230000.mmc/by-name/MISC      0660    root    system
+/dev/block/platform/soc/11230000.mmc/by-name/logo      0660    root    system
+/dev/block/platform/soc/11230000.mmc/by-name/frp       0660    root    system
 
-# sysfs properties
+# Connectivity
+/dev/stpwmt               0660   system     system
+/dev/wmtdetect            0660   system     system
+
+# BT
+/dev/stpbt                0660   bluetooth  net_bt_stack
+
+# GPS
+/dev/stpgps               0660   gps        gps
+/dev/gps                  0660   gps        system
+
+# ANT
+/dev/stpant               0660   system     system
+
+# WIFI
+/dev/wmtWifi              0660   system     system
+
+# FMRadio
+/dev/fm                   0660   media     media
+
+# NFC
+/dev/msr3110              0666   root       root
+/dev/mt6605               0660   nfc        radio
+
+#ION
+/dev/ion                  0666   root       root
+
+# MTK BTIF driver
+/dev/btif                 0600   system     system
+
+# MTK in-house TEE
+/dev/trustzone            0660   system       drmrpc
+
+# RPMB
+/dev/block/mmcblk0rpmb    0660   root       system
+
+# GPT timer
+/dev/mt_xgpt              0660   system     audio
 
 /sys/devices/virtual/thermal/thermal_zone* mode 0660  system system
 /sys/devices/virtual/thermal/thermal_zone* trips 0660  system system
