--- a/rootdir/init.mt8163.rc
+++ b/rootdir/init.mt8163.rc
@@ -1,17 +1,15 @@
 # MTK platform .rc configure
 
-import ${ro.vendor.rc}init.connectivity.rc
-import /vendor/etc/init/hw/init.mt8163.usb.rc
-import /vendor/etc/init/hw/init.project.rc
-import /FWUpgradeInit.rc
-import /vendor/etc/init/hw/init.aee.rc
-import /system/etc/init/hw/init.aee.rc
-import ${ro.vendor.rc}init.volte.rc
-import ${ro.vendor.rc}init.mal.rc
-import ${ro.vendor.rc}init.sensor_1_0.rc
+import /init.connectivity.rc
+import /init.mt8163.usb.rc
+import /init.project.rc
+import /init.aee.rc
+import /init.volte.rc
+import /init.mal.rc
+import /init.sensor_1_0.rc
 
 # init.modem.rc must be the LAST rc file because vold.post_fs_data_done is set in it
-import ${ro.vendor.rc}init.modem.rc
+import /init.modem.rc
 # *** DO NOT import the new rc file after this line ***
 
 on early-init
