--- a/rootdir/init.mt8163.rc
+++ b/rootdir/init.mt8163.rc
@@ -1,12 +1,6 @@
-# MTK platform .rc configure
-
-import /init.connectivity.rc
 import /init.mt8163.usb.rc
-import /init.project.rc
-import /init.aee.rc
-import /init.volte.rc
-import /init.mal.rc
-import /init.sensor_1_0.rc
+
+# MTK platform .rc configure
 
 # init.modem.rc must be the LAST rc file because vold.post_fs_data_done is set in it
 import /init.modem.rc
@@ -33,7 +27,8 @@ on init
     # Set swappiness from 60 to 100
     write /proc/sys/vm/swappiness 100
 
-	write /sys/block/zram0/comp_algorithm lz4
+    write /sys/block/zram0/comp_algorithm lz4
+    
     # Support legacy paths
     symlink /sdcard /mnt/sdcard
 
@@ -41,22 +36,117 @@ on init
     chown shell system /proc/mtk_battery_cmd/current_cmd
     chown shell system /proc/mtk_battery_cmd/discharging_cmd
 
-    #create mountpoint for persist partition
+    # create mountpoint for persist partition
     mkdir /mnt/vendor/persist 0771 system system
-# Create CIP mount point
+    
+    # Create CIP mount point
     mkdir /mnt/vendor/custom
 
-    mkdir /mnt/cd-rom 0000 system system
-
-# kisd
+    # kisd
     symlink /dev/block/platform/bootdevice/by-name/kb   /dev/kb
     symlink /dev/block/platform/bootdevice/by-name/dkb  /dev/dkb
 
-# change lk_env permission
+    # change lk_env permission
     chown root system /proc/lk_env
     chmod 0660 /proc/lk_env
 
-# mount different fs start
+
+
+on boot
+    write /proc/sys/vm/dirty_writeback_centisecs 300
+    chmod 0660 /sys/power/autosleep
+
+    chmod 0664 /sys/class/leds/lcd-backlight/brightness
+
+    chown system system /sys/devices/system/cpu/cpufreq/hotplug/cpu_num_base
+    chmod 0660 /sys/devices/system/cpu/cpufreq/hotplug/cpu_num_base
+    chown root   system /sys/kernel/debug/binder/transaction_log_enable
+    chown root   system /sys/kernel/debug/binder/perf_evalue
+
+    chown system /sys/module/mlog/parameters/do_mlog
+    chown system /sys/module/mlog/parameters/timer_intval
+
+    chown root   radio  /sys/class/leds/lcd-backlight/duty
+    chown root   radio  /sys/class/leds/lcd-backlight/div
+    chown system system /sys/class/leds/lcd-backlight/trigger
+    chown system system /sys/class/leds/button-backlight/trigger
+    chown system system /sys/class/leds/keyboard-backlight/trigger
+    chown system system /sys/class/leds/jogball-backlight/trigger
+    chown system system /sys/class/leds/red/trigger
+    chown system system /sys/class/leds/green/trigger
+    chown system system /sys/class/leds/blue/trigger
+
+    chown system system /sys/kernel/debug/ged/hal/fps_upper_bound
+    chmod 0660 /sys/kernel/debug/ged/hal/fps_upper_bound
+    chown system system /sys/kernel/debug/ged/hal/vsync_offset_level
+    chmod 0660 /sys/kernel/debug/ged/hal/vsync_offset_level
+    chown system system /sys/kernel/debug/ged/hal/event_notify
+    chmod 0660 /sys/kernel/debug/ged/hal/event_notify
+    chown system system /sys/kernel/debug/ged/hal/custom_upbound_gpu_freq
+    chmod 0660 /sys/kernel/debug/ged/hal/custom_upbound_gpu_freq
+    chown system system /sys/kernel/debug/ged/hal/custom_boost_gpu_freq
+    chmod 0660 /sys/kernel/debug/ged/hal/custom_boost_gpu_freq
+
+    # Permission for hibernation
+    chown radio system /sys/power/tuxonice
+    chown radio system /sys/power/tuxonice/do_hibernate
+    chmod 0770 /sys/power/tuxonice
+    chmod 0220 /sys/power/tuxonice/do_hibernate
+
+    # Smartbook Handler Framework
+    chown system system /sys/power/sb_state
+    chmod 0660 /sys/power/sb_state
+
+    # HMP CPU hotplug strategy
+    chown system system /proc/hps/num_base_perf_serv
+    chmod 0660 /proc/hps/num_base_perf_serv
+    chown system system /proc/hps/num_limit_power_serv
+    chmod 0660 /proc/hps/num_limit_power_serv
+
+    # CPU freq
+    chown system system /proc/cpufreq/cpufreq_limited_by_hevc
+    chmod 0660 /proc/cpufreq/cpufreq_limited_by_hevc
+    chown system system /proc/cpufreq/cpufreq_limited_max_freq_by_user
+    chmod 0660 /proc/cpufreq/cpufreq_limited_max_freq_by_user
+
+    # change permissions about terminal
+    chown root radio /proc/net/vlan/config
+    chmod 0640 /proc/net/vlan/config
+    chown root radio /proc/net/ip6_tables_matches
+    chown root radio /proc/net/ip6_tables_names
+    chown root radio /proc/net/ip6_tables_targets
+    chown root radio /proc/net/arp_tables_targets
+    chown root radio /proc/net/arp_tables_matches
+    chown root radio /proc/net/arp_tables_names
+    chown root radio /proc/net/ip_tables_targets
+    chown root radio /proc/net/ip_tables_matches
+    chown root radio /proc/net/ip_tables_names
+    chown root radio /proc/net/ip_conntrack_expect
+    chown root radio /proc/net/ip_conntrack
+    chown root radio /proc/net/nf_conntrack
+    chown root radio /proc/net/nf_conntrack_expect
+    chown root radio /proc/net/netfilter/nfnetlink_log
+    chown root radio /proc/net/netfilter/nfnetlink_queue
+
+    # WMT proc
+    chown shell system /proc/driver/wmt_dbg
+    chown shell system /proc/driver/wmt_aee
+
+    # Define device for ATCID
+    chmod 0660 /dev/ttyGS0
+    chown system /dev/ttyGS0
+    chmod 0660 /dev/ttyGS1
+    chown system /dev/ttyGS1
+
+    # define device for EMCSMDLOGGER
+    chmod 0660 /dev/ttyGS3
+    chown system radio /dev/ttyGS3
+
+    # usb
+    chown system system /sys/class/android_usb/android0/f_acm/port_index
+    chmod 0660 /sys/class/android_usb/android0/f_acm/port_index
+
+
 
 on charger
     chown system system /sys/class/leds/lcd-backlight/brightness
@@ -76,6 +166,8 @@ on charger
     chmod 0660 /sys/class/misc/md32/md32_mobile_log
     write /sys/class/misc/md32/md32_boot 1
 
+
+
 on fs
     write /proc/bootprof "INIT:Mount_START"
     symlink /dev/block/platform/soc/11230000.mmc /dev/block/platform/bootdevice
@@ -86,21 +178,23 @@ on fs
     write /proc/bootprof "INIT:Mount_END"
     write /proc/sys/vm/page-cluster 0
 
+
+
 on post-fs
     swapon_all /fstab.mt8163
 
     # Support legacy paths
     symlink /sdcard /storage/sdcard0
 
-    #change permissions for mediaserver
+    # change permissions for mediaserver
     chown root media /proc/clkmgr/mipi_test
 
-    #change permission for engineer mode
+    # change permission for engineer mode
     chown radio system /proc/clkmgr/pll_test
     chown radio system /proc/clkmgr/pll_fsel
     chmod 0664 /proc/clkmgr/pll_test
     chmod 0664 /proc/clkmgr/pll_fsel
-    #change permission for engineer mode
+    # change permission for engineer mode
     chown radio system /proc/freqhopping/dramc
     chown radio system /proc/freqhopping/dumpregs
     chown radio system /proc/freqhopping/freqhopping_debug
@@ -122,13 +216,16 @@ on post-fs
     insmod /vendor/lib/modules/br_netfilter.ko
     insmod /vendor/lib/modules/xt_physdev.ko    
 
+
+
 on post-fs-data
-    #amazon dha
+    # amazon dha
     start amzn_drmprov
     start amzn_dha_hmac
 
     # calibration
     mkdir /data/misc/sensor 0774 system system
+
     # Sensor
     chmod 0660 /dev/hwmsensor
     chmod 0660 /dev/msensor
@@ -310,15 +407,7 @@ on post-fs-data
     # Set mlock resource to unlimited
     setrlimit 8 4294967295 4294967295
 
-#
-# Connectivity related device nodes & configuration (begin)
-#
-
     # WiFi
-    mkdir /data/misc/wifi 0770 wifi wifi
-    mkdir /data/misc/wifi/sockets 0770 wifi wifi
-    mkdir /data/misc/wpa_supplicant 0770 wifi wifi
-    chown wifi wifi /data/misc/wifi
     mkdir /data/vendor/wifi 0770 wifi wifi
     mkdir /data/vendor/wifi/wpa 0770 wifi wifi
     mkdir /data/vendor/wifi/wpa/sockets 0770 wifi wifi
@@ -345,43 +434,8 @@ on post-fs-data
     # GPS EMI
     chmod 666 /dev/gps_emi
 
-#
-# Connectivity related device nodes & configuration (end)
-#
-
-# Encrypt phone function
+    # Encrypt phone function
     setprop vold.post_fs_data_done 1
-
-on init
-
-service fuse_usbotg /system/bin/sdcard -u 1023 -g 1023 -w 1023 -d /mnt/media_rw/usbotg /storage/usbotg
-    class late_start
-    disabled
-
-#
-# Connectivity related services (Begin)
-#
-
-service amzn_drmprov /vendor/bin/amzn_drmprov_check
-	class main
-	user root
-	group system drmrpc
-	oneshot
-	disabled
-
-service amzn_dha_hmac /vendor/bin/amzn_dha_hmac
-	class main
-	user root
-	group system drmrpc
-	oneshot
-	disabled
-
-# CABC
-on property:vendor.hwc.video_mode=1
-    write /sys/devices/platform/soc/soc:mtkfb@0/backlight_mode "mov"
-
-on property:vendor.hwc.video_mode=0
-    write /sys/devices/platform/soc/soc:mtkfb@0/backlight_mode "off"
 
 #
 # Connectivity related services (End)
@@ -448,6 +502,10 @@ on property:vendor.hwc.video_mode=0
     mkdir /data/misc/radvd 0770 system system
     chmod 444 /etc/radvd/radvd.conf
 
+    # Mali 3D GPU driver
+    chmod 666 /dev/mali0
+
+
     #Create cct mount point
     mkdir /mnt/vendor/cct
     chown root system /mnt/vendor/cct
@@ -495,6 +553,11 @@ on property:vendor.hwc.video_mode=0
 
     #Accdet
     chown root radio /sys/devices/platform/Accdet_Driver/driver/accdet_call_state
+
+    #VideoCodec
+    mknod /dev/Vcodec c 160 0
+    chmod 0660 /dev/Vcodec
+    chown media system /dev/Vcodec
 
     # DRM
     # playready data and control dirs
@@ -684,10 +747,40 @@ on property:vendor.hwc.video_mode=0
     chmod 0660 /dev/mtkg2d
     chown system media /dev/mtkg2d
 
+    # SMI
+    chmod 0660 /dev/MTK_SMI
+    chown media media /dev/MTK_SMI
+
     #for eng mode
     chmod 0664 /dev/misc-sd
 
-    chmod 0666 /sys/bus/platform/drivers/mem_bw_ctrl/concurrency_scenario
+   #change partition permission
+
+    chmod 0640 /mtd@sec_ro
+    chown root system /mtd@sec_ro
+
+    chmod 0640 /mtd@preloader
+    chown root system /mtd@preloader
+
+    chmod 0660 /mtd@pro_info
+    chown root system /mtd@pro_info
+
+    chmod 0640 /mtd@bootimg
+    chown root system /mtd@bootimg
+
+    chmod 0640 /mtd@recovery
+    chown root system /mtd@recovery
+
+    chmod 0660 /mtd@nvram
+    chown root system /mtd@nvram
+
+    chmod 0660 /mtd@seccfg
+    chown root system /mtd@seccfg
+
+    chmod 0660 /mtd@misc
+    chown root system /mtd@misc
+
+    chmod 0664 /sys/bus/platform/drivers/mem_bw_ctrl/concurrency_scenario
     chown media media /sys/bus/platform/drivers/mem_bw_ctrl/concurrency_scenario
 
     #mtk_sched
@@ -716,45 +809,6 @@ on property:vendor.hwc.video_mode=0
     chown root system /sys/autok/stage1/3/LOG
     chown root system /sys/autok/stage2/3
 
-    write /proc/sys/vm/dirty_writeback_centisecs 300
-    chmod 0660 /sys/power/autosleep
-
-    chmod 0664 /sys/class/leds/lcd-backlight/brightness
-
-    chown system system /sys/devices/system/cpu/cpufreq/hotplug/cpu_num_base
-    chmod 0660 /sys/devices/system/cpu/cpufreq/hotplug/cpu_num_base
-    chown root system /sys/kernel/debug/binder/transaction_log_enable
-    chown root system /sys/kernel/debug/binder/perf_evalue
-
-    chown system /sys/module/mlog/parameters/do_mlog
-    chown system /sys/module/mlog/parameters/timer_intval
-
-    # Permission for hibernation
-    chown radio system /sys/power/tuxonice
-    chown radio system /sys/power/tuxonice/do_hibernate
-    chmod 0770 /sys/power/tuxonice
-    chmod 0220 /sys/power/tuxonice/do_hibernate
-
-# Smartbook Handler Framework
-    chown system system /sys/power/sb_state
-    chmod 0660 /sys/power/sb_state
-
-# HMP CPU hotplug strategy
-    chown system system /proc/hps/num_base_perf_serv
-    chmod 0660 /proc/hps/num_base_perf_serv
-    chown system system /proc/hps/num_limit_power_serv
-    chmod 0660 /proc/hps/num_limit_power_serv
-
-# CPU freq
-    chown system system /proc/cpufreq/cpufreq_limited_by_hevc
-    chmod 0660 /proc/cpufreq/cpufreq_limited_by_hevc
-    chown system system /proc/cpufreq/cpufreq_limited_max_freq_by_user
-    chmod 0660 /proc/cpufreq/cpufreq_limited_max_freq_by_user
-
-# WMT proc
-    chown shell system /proc/driver/wmt_dbg
-    chown shell system /proc/driver/wmt_aee
-
     #usb
     chown system system /sys/class/android_usb/android0/f_acm/port_index
     chmod 0660 /sys/class/android_usb/android0/f_acm/port_index
@@ -765,10 +819,11 @@ on property:vendor.hwc.video_mode=0
     #Thermal
     mkdir /data/vendor/.tp/ 0775 system system
 
+
 # End of adding by MTK drivers
 # -----------------------
 
-on boot
+
 
 # Wlan
 service wpa_supplicant /vendor/bin/hw/wpa_supplicant \
@@ -842,3 +897,28 @@ service cameraserver /system/bin/cameraserver
 		group audio camera drmrpc inet media mediadrm net_bt net_bt_admin net_bw_acct sdcard_rw
 		ioprio rt 4
 		writepid /dev/cpuset/foreground/tasks
+
+service fuse_usbotg /system/bin/sdcard -u 1023 -g 1023 -w 1023 -d /mnt/media_rw/usbotg /storage/usbotg
+    class late_start
+    disabled
+
+service amzn_drmprov /vendor/bin/amzn_drmprov_check
+	class main
+	user root
+	group system drmrpc
+	oneshot
+	disabled
+
+service amzn_dha_hmac /vendor/bin/amzn_dha_hmac
+	class main
+	user root
+	group system drmrpc
+	oneshot
+	disabled
+
+# CABC
+on property:vendor.hwc.video_mode=1
+    write /sys/devices/platform/soc/soc:mtkfb@0/backlight_mode "mov"
+
+on property:vendor.hwc.video_mode=0
+    write /sys/devices/platform/soc/soc:mtkfb@0/backlight_mode "off"
