rootdir: allow writing to the kernel trace log
- fixes:
  Abort message: 'jni_internal.cc:696] JNI FatalError called: (com.android.webview:sandboxed_process0) Failed open(/sys/kernel/debug/tracing/trace_marker, 1): Permission denied'

--- a/rootdir/init.mt8163.rc
+++ b/rootdir/init.mt8163.rc
@@ -216,7 +216,8 @@ on post-fs
     insmod /vendor/lib/modules/br_netfilter.ko
     insmod /vendor/lib/modules/xt_physdev.ko    
 
-
+    # Allow writing to the kernel trace log.
+    chmod 0222 /sys/kernel/debug/tracing/trace_marker
 
 on post-fs-data
     # amazon dha
